更新JVM GC算法相关文档